--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "postinstall": "nuxt prepare && prisma generate",
-    "lint": "eslint . --ext .vue,.js,.ts,.tsx --ignore-path .gitignore",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "nuxt preview"
   },
   "dependencies": {
@@ -19,22 +20,23 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@formkit/auto-animate": "^0.8.2",
+    "@logto/nuxt": "^0.1.12",
     "@nuxt/devtools": "^1.3.3",
+    "@nuxt/eslint": "^0.3.13",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.16.0",
+    "@pinia/nuxt": "^0.5.1",
     "@types/node": "^20.14.2",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@vueuse/nuxt": "^10.10.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "^3.11.2",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.15.0",
-    "typescript": "^4.9.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "typescript": "^4.9.5"
   },
   "ct3nMetaData": {
     "initVersion": "0.2.1"
