--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "postinstall": "nuxt prepare && prisma generate",
+    "postinstall": "nuxt prepare ",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.0",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "superjson": "^2.2.1",
@@ -35,10 +34,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.15.0",
     "typescript": "^4.9.5"
-  },
-  "ct3nMetaData": {
-    "initVersion": "0.2.1"
   }
 }
